--- a/src/components/Body/Body.css
+++ b/src/components/Body/Body.css
@@ -5,6 +5,9 @@
 }
 .items-container{
     border: 2px solid red;
+    margin-left: 50px;
+    margin-top: 30px;
+    background-color: rgb(244, 255, 255);
 }
 .cartlist-container{
     border: 2px solid orange;
