--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -9,3 +9,41 @@
     display: flex;
     margin-left: 25px;
 }
+.profile-info{
+    display: flex;
+    background-color: lightgrey;
+    /* padding: 25px; */
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+    margin-right: 25px;
+}
+.weight{
+    margin-right: 25px;
+
+}
+.weight h4{
+    margin-bottom: -10px;
+}
+.height{
+    margin-right: 25px;
+}
+.height h4{
+    margin-bottom: -10px;
+}
+.age h4{
+    margin-bottom: -10px;
+}
+.btn-break-time{
+    background-color: lightblue;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    margin-right: 20px;
+}
+.btn-break-time button{
+    padding: 10px;
+    border: none;
+    border-radius: 20px;
+    margin-right: 15px;
+}
