--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -22,3 +22,20 @@
     border: 2px solid red;
     /* width: 25%; */
 }
+
+@media screen and (min-width:200px) and (max-width:850px) {
+    .container{
+        grid-template-columns: 1fr;
+    }
+    .card{
+        grid-template-columns: 1fr;
+    }
+}
+@media screen and (min-width:851px)  and (max-width:1400px){
+    .container{
+        grid-template-columns: 2.5fr 1.5fr;
+    }
+    .card{
+        grid-template-columns: repeat(3,1fr);
+    }
+}
