--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,8 +3,8 @@
 }
 .header{
     display: flex;
-    margin-top: 50px;
-    margin-left: 100px;
-    border: 2px solid blue;
+    /* margin-top: 50px;
+    margin-left: 100px; */
+    border: 2px solid red;
     width: 30%;
 }
