--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -4,6 +4,7 @@
 .profile-container img{
     
     width: 40px;
+    margin-top: 5px;
     margin-right: 10px;
     border-radius: 20px;
     justify-content: center;
@@ -12,8 +13,13 @@
 .profile-container{
     display: flex;
     margin-left: 25px;
+    align-items: center;
+    justify-content: center;
     /* border: 2px solid red; */
     
+}
+.profile h3{
+    margin-bottom: -5px;
 }
 .profile-info{
     display: flex;
